// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Render with background levelDirection one 1`] = `
<defs>
  <marker
    id="circle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <circle
      cx="4"
      cy="4"
      fill="#3BAA34"
      r="4"
    />
  </marker>
  <marker
    id="square"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M0 0 L8 0 L8 8 L0 8 z"
      fill="#FD9C00"
    />
  </marker>
  <marker
    id="triangle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M4 0 L8 8 L0 8 z"
      fill="#E30713"
    />
  </marker>
</defs>
`;

exports[`Render with background levelDirection one 2`] = `
<rect
  fill="#EAF6EB"
  height="80"
  opacity="100%"
  width="600"
  x="100"
  y="100"
/>
`;

exports[`Render with background levelDirection one 3`] = `
<rect
  fill="#FFEFC7"
  height="40"
  opacity="100%"
  width="600"
  x="100"
  y="180"
/>
`;

exports[`Render with background levelDirection one 4`] = `
<rect
  fill="#FFE5E2"
  height="80"
  opacity="100%"
  width="600"
  x="100"
  y="220"
/>
`;

exports[`Render with background levelDirection zero 1`] = `
<defs>
  <marker
    id="circle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <circle
      cx="4"
      cy="4"
      fill="#3BAA34"
      r="4"
    />
  </marker>
  <marker
    id="square"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M0 0 L8 0 L8 8 L0 8 z"
      fill="#FD9C00"
    />
  </marker>
  <marker
    id="triangle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M4 0 L8 8 L0 8 z"
      fill="#E30713"
    />
  </marker>
</defs>
`;

exports[`Render with background levelDirection zero 2`] = `
<rect
  fill="#FFE5E2"
  height="80"
  opacity="100%"
  width="600"
  x="100"
  y="100"
/>
`;

exports[`Render with background levelDirection zero 3`] = `
<rect
  fill="#FFEFC7"
  height="40"
  opacity="100%"
  width="600"
  x="100"
  y="180"
/>
`;

exports[`Render with background levelDirection zero 4`] = `
<rect
  fill="#EAF6EB"
  height="80"
  opacity="100%"
  width="600"
  x="100"
  y="220"
/>
`;

exports[`Render with format and lang = en 1`] = `
<defs>
  <marker
    id="circle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <circle
      cx="4"
      cy="4"
      fill="#3BAA34"
      r="4"
    />
  </marker>
  <marker
    id="square"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M0 0 L8 0 L8 8 L0 8 z"
      fill="#FD9C00"
    />
  </marker>
  <marker
    id="triangle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M4 0 L8 8 L0 8 z"
      fill="#E30713"
    />
  </marker>
</defs>
`;

exports[`Render with format and lang = nb 1`] = `
<defs>
  <marker
    id="circle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <circle
      cx="4"
      cy="4"
      fill="#3BAA34"
      r="4"
    />
  </marker>
  <marker
    id="square"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M0 0 L8 0 L8 8 L0 8 z"
      fill="#FD9C00"
    />
  </marker>
  <marker
    id="triangle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M4 0 L8 8 L0 8 z"
      fill="#E30713"
    />
  </marker>
</defs>
`;

exports[`Render with other format 1`] = `
<defs>
  <marker
    id="circle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <circle
      cx="4"
      cy="4"
      fill="#3BAA34"
      r="4"
    />
  </marker>
  <marker
    id="square"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M0 0 L8 0 L8 8 L0 8 z"
      fill="#FD9C00"
    />
  </marker>
  <marker
    id="triangle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M4 0 L8 8 L0 8 z"
      fill="#E30713"
    />
  </marker>
</defs>
`;

exports[`Standard render 1`] = `
<defs>
  <marker
    id="circle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <circle
      cx="4"
      cy="4"
      fill="#3BAA34"
      r="4"
    />
  </marker>
  <marker
    id="square"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M0 0 L8 0 L8 8 L0 8 z"
      fill="#FD9C00"
    />
  </marker>
  <marker
    id="triangle"
    markerHeight="8"
    markerWidth="8"
    refX="4"
    refY="4"
  >
    <path
      d="M4 0 L8 8 L0 8 z"
      fill="#E30713"
    />
  </marker>
</defs>
`;
